feal: add team, individualAwaiter, teamAwaiter, teamRequest service